Update to portfolio

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Research Laboratory Assistant</h4>
+                    <h4>University of Michigan - Geological Research Laboratories</h4>
                     <h5 class="subheading">Fall 2013-Winter 2014</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Studied the mass transfer of rare earth elements as mineral deposits</p>
+                    <p class="text-muted">Research Laboratory Assistant</p>
                   </div>
                 </div>
               </li>
@@ -147,7 +147,7 @@
                     <h5 class="subheading">January 2018 - Present</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Software Developer bootcamp</p>
+                    <p class="text-muted">Software Developer Bootcamp</p>
                   </div>
                 </div>
               </li>
@@ -170,7 +170,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Skills</h2>
-            <h3 class="section-subheading text-muted">Skills that will hopefully pay the bills</h3>
+            <h3 class="section-subheading text-muted">Skills to pay the bills</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -204,7 +204,8 @@
               <i class="fab fa-microsoft fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">C#</h4>
-            <p class="text-muted">ASP.NET</p>
+            <p class="text-muted">ASP.NET
+									<br>MVC</p>
           </div>
 		  <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -212,15 +213,16 @@
               <i class="fab fa-git-square fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Version Control</h4>
-            <p class="text-muted">Git</p>
+            <p class="text-muted">Microsoft Team Foundation Server
+									<br>Git</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-file-excel fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Microsoft Office</h4>
-            <p class="text-muted">Microsoft Excel/Word</p>
+            <h4 class="service-heading">Project Management</h4>
+            <p class="text-muted">Agile/Scrum</p>
           </div>
         </div>
       </div>
@@ -237,24 +239,24 @@
         </div>
 		
         <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a href="https://github.com/AlexanderWong/Library-Management-System/blob/master/LibraryManagementSystemAndStoredProceduresFINAL.sql">
-              <img class="img-fluid" src="img/books-shelves-architecture-wood-442420.jpeg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Library SQL Database</h4>
-              <p class="text-muted">Mock-up of a searchable library management system</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a href="https://github.com/AlexanderWong/DevU/blob/master/MegaCasinoChallenge/MegaCasinoChallenge/Default.aspx.cs">
-              <img class="img-fluid" src="img/addiction-bet-betting-casino.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>C# Casino</h4>
-              <p class="text-muted">Slot Machine Application</p>
-            </div>
-          </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+			<a href="https://github.com/AlexanderWong/LiveProjectSnippets">
+			  <img class="img-fluid" src="img/alarm-clock-calendar-close-up-908298.jpg" alt="">
+			</a>
+			<div class="portfolio-caption">
+			  <h4>ScheduleIt</h4>
+			  <p class="text-muted">Live project utilizing Entity Framework 6 Code First using MVC 5</p>
+			</div>
+		  </div>
+		  <div class="col-md-4 col-sm-6 portfolio-item">
+			<a href="https://github.com/AlexanderWong/DevU/blob/master/MegaCasinoChallenge/MegaCasinoChallenge/Default.aspx.cs">
+			  <img class="img-fluid" src="img/addiction-bet-betting-casino.jpg" alt="">
+			</a>
+			<div class="portfolio-caption">
+			  <h4>C# Casino</h4>
+			  <p class="text-muted">Slot Machine Application</p>
+			</div>
+		  </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a href="https://github.com/AlexanderWong/Tech-Academy-Projects/tree/master/Pizza%20Order">
               <img class="img-fluid" src="img/pizza.jpeg" alt="">
@@ -262,52 +264,8 @@
             <div class="portfolio-caption">
               <h4>Kingston Pizzeria</h4>
               <p class="text-muted">Pizza ordering application utilizing JavaScript</p>
-            </div
-          </div>
-		  <!--
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
-            </div>
-          </div>
-		  -->
         </div>
 		
       </div>
@@ -426,8 +384,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Me</h2>
-            <h3 class="section-subheading text-muted">Looking forward to hearing from you!</h3>
+            <h2 class="section-heading text-uppercase">Connect with me via the e-mail, LinkedIn, or GitHub links below!</h2>
+            <!-- <h3 class="section-subheading text-info"><a href="mailto:code.alexanderwong@gmail.com">code.alexanderwong@gmail.com</a></h3> -->
           </div>
         </div>     
       </div>
@@ -450,6 +408,11 @@
               <li class="list-inline-item">
                 <a href="https://github.com/AlexanderWong">
                   <i class="fab fa-github"></i>
+                </a>
+              </li>
+			  <li class="list-inline-item">
+                <a href="mailto:wongalex@umich.edu" target = "_blank">
+                  <i class="fas fa-envelope-square"></i>
                 </a>
               </li>
               <!--<li class="list-inline-item">
