contact info update

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/alexander-wong-73769b90/">
+                <a href="https://www.linkedin.com/in/alexanderwong40/">
                   <i class="fab fa-linkedin"></i>
                 </a>
               </li>
