--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <h5 class="subheading">Fall 2013-Winter 2014</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Research Laboratory Assistant</p>
+                    <p class="text-muted">Research Assistant</p>
                   </div>
                 </div>
               </li>
