--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>The Tech Academy</h4>
-                    <h5 class="subheading">January 2018 - Present</h5>
+                    <h5 class="subheading">January 2018 - May 2018</h5>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Software Developer Bootcamp</p>
@@ -258,126 +258,18 @@
 			</div>
 		  </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a href="https://github.com/AlexanderWong/Tech-Academy-Projects/tree/master/Pizza%20Order">
-              <img class="img-fluid" src="img/pizza.jpeg" alt="">
+            <a href="https://www.timeboxed.app">
+              <img class="img-fluid" src="img/timeboxed.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Kingston Pizzeria</h4>
-              <p class="text-muted">Pizza ordering application utilizing JavaScript</p>
+              <h4>Timeboxed</h4>
+              <p class="text-muted">Start-up Productivity Application utilizing ReactJS</p>
             </div>
           </div>
         </div>
 		
       </div>
     </section>
-
-   
-
-    <!-- Team 
-    <section class="bg-light-gray" id="team">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-          </div>
-        </div>
-		
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/.jpg" alt="">
-              <h4></h4>
-              <p class="text-muted"></p>
-             
-            </div>
-          </div>
-		  
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Diana Pertersen</h4>
-              <p class="text-muted">Lead Developer</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-          </div>
-        </div>
-      </div>
-    </section>
--->
-    <!-- Clients -->
-    <!--<section class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-	-->
 
     <!-- Contact -->
     <section id="contact">
