--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
               <i class="fab fa-js-square fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">JavaScript</h4>
-            <p class="text-muted">jQuery</p>
+            <p class="text-muted">ReactJS 
+									<br>jQuery</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
