--- a/index.html
+++ b/index.html
@@ -151,6 +151,35 @@
                   </div>
                 </div>
               </li>
+
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img id="image-rotate" class="rounded-circle img-fluid" src="img/about/boeingLogo.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Boeing (Contract)</h4>
+                    <h5 class="subheading">January 2019 - February 2020</h5>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Software Engineer</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img id="image-rotate" class="rounded-circle img-fluid" src="img/about/microsoft.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>Microsoft (Contract)</h4>
+                    <h5 class="subheading">February 2020 - Current</h5>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Software Engineer</p>
+                  </div>
+                </div>
+              </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Your
@@ -173,15 +202,16 @@
             <h3 class="section-subheading text-muted">Skills to pay the bills</h3>
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">HTML/CSS</h4>
-            <p class="text-muted">Bootstrap 4.0</p>
-          </div>
+
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fab fa-js-square fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">JavaScript</h4>
+          <p class="text-muted">ReactJS 
+                <br>TypeScript</p>
+        </div>
 		  <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -190,15 +220,15 @@
             <h4 class="service-heading">Databases</h4>
             <p class="text-muted">SQL</p>
           </div>
-		  <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fab fa-js-square fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">JavaScript</h4>
-            <p class="text-muted">ReactJS 
-									<br>jQuery</p>
-          </div>
+          <div class="row text-center">
+            <div class="col-md-4">
+              <span class="fa-stack fa-4x">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
+              </span>
+              <h4 class="service-heading">HTML/CSS</h4>
+              <p class="text-muted">Bootstrap 4.0<br>Material-UI</p>
+            </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -259,12 +289,12 @@
 			</div>
 		  </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a href="https://www.timeboxed.app">
+            <a href="https://github.com/AlexanderWong/streams">
               <img class="img-fluid" src="img/timeboxed.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Timeboxed</h4>
-              <p class="text-muted">Start-up Productivity Application utilizing ReactJS</p>
+              <h4>Video Streaming Project</h4>
+              <p class="text-muted">Twitch clone using ReactJS</p>
             </div>
           </div>
         </div>
@@ -304,7 +334,7 @@
                 </a>
               </li>
 			  <li class="list-inline-item">
-                <a href="mailto:wongalex@umich.edu" target = "_blank">
+                <a href="mailto:code.alexanderwong@gmail.com" target = "_blank">
                   <i class="fas fa-envelope-square"></i>
                 </a>
               </li>
