--- a/index.html
+++ b/index.html
@@ -202,16 +202,17 @@
             <h3 class="section-subheading text-muted">Skills to pay the bills</h3>
           </div>
         </div>
-
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fab fa-js-square fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">JavaScript</h4>
-          <p class="text-muted">ReactJS 
-                <br>TypeScript</p>
-        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">HTML/CSS</h4>
+            <p class="text-muted">Bootstrap 4.0
+              <br>Material-UI
+            </p>
+          </div>
 		  <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -220,15 +221,16 @@
             <h4 class="service-heading">Databases</h4>
             <p class="text-muted">SQL</p>
           </div>
-          <div class="row text-center">
-            <div class="col-md-4">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">HTML/CSS</h4>
-              <p class="text-muted">Bootstrap 4.0<br>Material-UI</p>
-            </div>
+		  <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fab fa-js-square fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">JavaScript</h4>
+            <p class="text-muted">ReactJS 
+									<br>TypeScript
+            </p>
+          </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -290,7 +292,7 @@
 		  </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a href="https://github.com/AlexanderWong/streams">
-              <img class="img-fluid" src="img/timeboxed.jpg" alt="">
+              <img class="img-fluid" src="img/stream.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Video Streaming Project</h4>
