--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 		  </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a href="https://github.com/AlexanderWong/streams">
-              <img class="img-fluid" src="img/stream.jpg" alt="">
+              <img class="img-fluid" src="img/twitch.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Video Streaming Project</h4>
