--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Geologist turned Software Developer</h3> 
+            <h3 class="section-subheading text-muted">Geologist turned Software Engineer</h3> 
           </div>
         </div>
         <div class="row">
